hphp/test/zend/good/Zend/tests/ns_087.php.expectf

Fatal error: No code may exist outside of namespace {} in %s/ns_087.php on line 9
